<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_arrow_forward_black_24dp"

            android:title="Your Tracks" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_saved"
            android:title="Saved Items" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_format_list_numbered"
            android:title="To do List" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_help"
            android:title="Help" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>